done with searchview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
-    <string name="app_name">OWOXGallary</string>
+    <string name="app_name">OWOXGallery</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="er_default_inner_error">Нет ответа от сервера</string>
+    <string name="empty_list">Список пуст</string>
+    <string name="try_again">Повторить</string>
+    <string name="er_rate_limit">Превышен лимит</string>
+    <string name="text_search">Search…</string>
 </resources>
