done with downloading

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,13 @@
     <string name="try_again">Повторить</string>
     <string name="er_rate_limit">Превышен лимит</string>
     <string name="text_search">Search…</string>
+    <string name="title_activity_details">DetailsActivity</string>
+    <string name="text_download">Download</string>
+    <string name="look_at">Look at</string>
+    <string name="send_to">Send to</string>
+    <string name="text_download_have_started">Loading file %s</string>
+    <string name="text_download_finished_with_success">Downloading %s have finished with success</string>
+    <string name="text_download_finished_with_fail">Downloading %s have finished with failure</string>
+    <string name="required_permissions">You should garant permissions to write external storage</string>
+    <string name="er_to_get_download_link">Couldn\'t get download link</string>
 </resources>
